# xstatic-filesaver

./: .gitreview  README.txt  setup.cfg  setup.py
xstatic/pkg/filesaver/: __init__.py
