[metadata]
name = XStatic-FileSaver
description = FileSaver 1.3.2 (XStatic packaging standard)
description-file = README.rst
maintainer = xinni.ge
maintainer-email = xinni.ge@ntt.com
home-page = https://github.com/eligrey/FileSaver.js
keywords = filesaver xstatic
license = MIT
zip_safe = False
namespace_packages =
    xstatic
    xstatic.pkg

[files]
packages =
    xstatic

[bdist_wheel]
universal = True
